# python_rarl2

./: .gitignore  CLAUDE.md  CRITICAL_ANALYSIS_DUAL_INPUT.md  FINAL_STATUS.md  IMPLEMENTATION_PLAN.md  README.md  balanced_truncation.py  bop.py  bop_gradient.py  chart_parametrization.py  cross_gramians.py  debug_scalar_lossless.py  example_rarl2_usage.py  fourier_rarl2.py  gradient_computation.py  gradient_friendly_stein.py  h2_projection.py  implicit_stein.py  lossless_embedding.py  lossless_embedding_torch.py  mkl_integration.py  pyproject.toml  rarl2_architecture.py  rarl2_architecture_with_ad.py  rarl2_gradient_optimizer.py  rarl2_implicit_diff.py  rarl2_optimizer.py  requirements.txt  setup.py  test_analytical_h2.py  test_bop.py  test_chart_optimizer_analytical.py  test_chart_parametrization.py  test_fourier_rarl2.py  test_h2_projection.py  test_lossless_embedding.py  test_rarl2_complete.py  test_rarl2_high_order.py  test_scalar_case.py  test_scalar_fix.py  (+2 more)
.claude/agents/: research-paper-analyst.md
old_attempts/: MATHEMATICAL_FOUNDATION_PLAN.md  RARL2_ALGORITHM_REFERENCE.md  RARL2_IMPLICIT_DIFF_SUMMARY.md  rarl2_analytical_gradient.py  rarl2_corrected_sketch.py  rarl2_gradient_corrected.py  rarl2_gradient_simplified.py  rarl2_integrated.py  test_gradient.py  test_gradient_autodiff.py  test_gradient_chain.py  test_rarl2_integrated.py
